@@ -1,9 +1,9 @@
-/*	$NetBSD: content-bozo.c,v 1.8 2013/07/11 07:44:19 mrg Exp $	*/
+/*	$NetBSD: content-bozo.c,v 1.9 2014/01/02 08:21:38 mrg Exp $	*/
 
 /*	$eterna: content-bozo.c,v 1.17 2011/11/18 09:21:15 mrg Exp $	*/
 
 /*
- * Copyright (c) 1997-2013 Matthew R. Green
+ * Copyright (c) 1997-2014 Matthew R. Green
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
